@@ -1,3 +1,10 @@
+2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Services/NUnitService.cs, Gui/TestPad.cs: Moved SearchTest to
+	  NUnitService.
+	* Gui/TestResultsPad.cs: Fixed bug 366047 - Exceptions in "Test
+	  results" pad.
+
 2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Project/NUnitAssemblyGroupFileFormat.cs: Track api changes.
